# CUDA_Scratch

./: .gitignore
0_hello_world/: CMakeLists.txt  hello_world.cu
1_check_dimension/: CMakeLists.txt  check_dimension.cu
2_grid_block/: CMakeLists.txt  grid_block.cu
3_sum_arrays/: CMakeLists.txt  sum_arrays.cu
4_sum_arrays_timer/: CMakeLists.txt  sum_arrays_timer.cu
async_queue_show/: CMakeLists.txt  queue.cu
cudaDeviceProp/: CMakeLists.txt  cudaDeviceProp.cu
include/: scratch.h
opt_reduce/: CMakeLists.txt
opt_reduce/reduce_v0/: CMakeLists.txt  reduce_v0.cu
opt_reduce/reduce_v0_sm_no_divergence/: CMakeLists.txt
shared_memory/: CMakeLists.txt  L1_and_sm_memory.cu
